2005-02-11  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs (IsAssignableTo): New helper method. Fixes #70838.
	
	* TypeBuilder.cs: Fix warning.

2005-01-21 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	
	* MethodBuilder.cs, TypeBuilder: missing 'params' in some method signature
	patch by Kamil Skalski <nazgul@nemerle.org>

2005-01-18  Geoff Norton  <gnorton@customerdna.com>

	* ModuleBuilder.cs: Interfaces should have null BaseType.
	Fixes #71301.

2005-01-18  Miguel de Icaza  <miguel@ximian.com>

	* TypeBuilder.cs: Add check for creation.  Fix from Geoff.

2004-12-16  Zoltan Varga  <vargaz@freemail.hu>

	* CustomAttributeBuilder.cs: Fix a warning.

Wed Dec 15 11:34:13 CET 2004 Paolo Molaro <lupus@ximian.com>

	* ModuleBuilder.cs, EnumBuilder.cs: actually add the enumbuilder
	to the type list of the module (bug#70488).

2004-12-09  Martin Baulig  <martin@ximian.com>

	* GenericTypeParameterBuilder.cs
	(GenericTypeParameterBuilder.IsValueType): Fixed the FIXME.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilder.cs: Move corlib_internal field here from Assembly.
	
	* AssemblyBuilder.cs: Add corlib_internal to the ctor parameters.

2004-12-06  Ben Maurer  <bmaurer@ximian.com>

	* TypeBuilder.cs (CreateType): Creating a type twice does not
	throw in msft.

2004-11-22  Zoltan Varga  <vargaz@freemail.hu>

	* ModuleBuilder.cs: Check that all types inside the module are created.
	Fixes #69780.

2004-11-13  Ben Maurer  <bmaurer@ximian.com>

	* ModuleBuilder.cs (Save): Use new WriteToFile icall.

2004-11-04  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs: Make some members work if the type is created since
	MS does this.

2004-10-30  Zoltan Varga  <vargaz@freemail.hu>

	* CustomAttributeBuilder.cs: Check that arguments are not 
	multi-dimensional arrays.

2004-10-12  Martin Baulig  <martin@ximian.com>

	* TypeBuilder.cs (TypeBuilder.setup_generic_class): Renamed to
	create_generic_class() and added a new setup_generic_class().